--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "dist"
   ],
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
     "agora-rtc-react": "^1.1.3",
     "agora-rtm-react": "^1.1.2"
   }
