--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agora-custom-ui",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Personal Project for custom agora ui kit. I do not suggest downloading and using this. This is completely based on Ekaansh Arora's agora react ui kit and will only contain modifications that I need personally.",
   "repository": {
     "type": "git",
@@ -73,6 +73,9 @@
     "dist"
   ],
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
     "agora-rtc-react": "^1.1.3",
     "agora-rtm-react": "^1.1.2"
   }
